--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@400;500;700&family=Fira+Sans+Extra+Condensed:ital,wght@1,700&family=Philosopher:wght@700&display=swap");
+
 body {
   margin: 0;
   font-family: "Noto sans TC", sans-serif;
@@ -76,11 +77,6 @@ footer {
 .primary__text {
   margin-bottom: 25px;
 }
-
-/* .section-primary {
-  padding: 20px;
-  background-color: #f9f9f9;
-} */
 
 .wrapper-content {
   display: flex;
@@ -177,6 +173,7 @@ footer {
   margin-bottom: 5px;
 }
 
+/* Contribution Section */
 .contribution {
   background-color: #ffffff;
   padding: 50px 30px;
@@ -198,6 +195,7 @@ footer {
 
 .contribution-text {
   flex: 2;
+  margin-bottom: 30px; /* Added margin for spacing between items */
 }
 
 .contribution__title {
@@ -208,7 +206,50 @@ footer {
 
 .contribution__description {
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 1.8; /* Added line height for better readability */
+  margin-bottom: 20px; /* Added margin at the bottom */
+}
+
+.contribution__description br {
+  margin-bottom: 10px; /* Space between lines with <br> */
+}
+
+/* Software Projects Section */
+.software-projects {
+  background-color: #FFF0AC;
+  padding: 50px 30px;
+}
+
+.projects__title {
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+
+.project__item {
+  margin-bottom: 30px; /* Added margin for spacing between items */
+}
+
+.project__name {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.project__time {
+  font-size: 16px;
+  font-style: italic;
+  margin-bottom: 10px;
+}
+
+.project__description {
+  font-size: 15px;
+  line-height: 1.8; /* Increase line height for readability */
+  margin-bottom: 20px; /* Added margin at the bottom */
+}
+
+.project__description br {
+  margin-bottom: 10px; /* Space between lines with <br> */
 }
 
 /* footer */
@@ -225,6 +266,7 @@ footer {
   align-items: center;
 }
 
+/* Media Queries */
 @media screen and (max-width: 1023px) and (min-width: 768px) {
   .footer-content {
     flex-direction: column;
@@ -253,25 +295,7 @@ footer {
   .footer-nav-list {
     margin-top: 30px;
   }
-}
 
-@media screen and (max-width: 1023px) and (min-width: 768px) {
-  .primary-content {
-    padding-bottom: 0;
-  }
-
-  .wrapper-primary-text {
-    width: 50%;
-    padding-bottom: 80px;
-  }
-
-  .primary__main-img {
-    width: 50%;
-    align-self: flex-end;
-  }
-}
-
-@media screen and (max-width: 767px) {
   .primary-content {
     flex-direction: column;
     padding-bottom: 0;
